--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FCR Projects</string>
+
+    <string name="signed_in_successfully">Signed in successfully!</string>
+    <string name="sign_in_failed">Sign in failed!</string>
 </resources>
