--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,10 +17,15 @@
     <string name="ok">Да</string>
     <string name="cancel">Отмена</string>
     <string name="failed_to_open_project">Не удалось открыть проектную папку</string>
-
+    <string name="failed_to_open_file">Не удалось открыть файл</string>
+    <string name="permission_storage_denied">Нет доступа к хранилищу</string>
+    <string name="open_file_chooser_title">Открыть файл</string>
+    <string name="no_app_to_view_file">Установите приложение \nдля просмотра файлов %s</string>
+    <string name="failed_to_download_file">Не удалось загрузить файл %s</string>
 
     <string name="tab_current">В работе</string>
     <string name="tab_archive">Архив</string>
+    <string name="loading_file">Загрузка файла…</string>
 
     <string-array name="tab_titles">
         <item>@string/tab_current</item>
